--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
-const { title = "ccc333bbb - Dark Walker's Memo", lang = "en" } = Astro.props;
+import { SITE_CONFIG } from '../config/site';
+
+const { title = SITE_CONFIG.title, lang = SITE_CONFIG.defaultLanguage } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -8,7 +10,7 @@ const { title = "ccc333bbb - Dark Walker's Memo", lang = "en" } = Astro.props;
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{title}</title>
-    <link rel="icon" type="image/svg+xml" href="/memo/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={`${SITE_CONFIG.baseUrl}/favicon.svg`} />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;700&family=Noto+Sans:wght@300;400;500&display=swap" rel="stylesheet">
