--- a/src/components/GiscusComments.astro
+++ b/src/components/GiscusComments.astro
@@ -11,7 +11,7 @@ export interface Props {
   reactionsEnabled?: boolean;
   emitMetadata?: boolean;
   inputPosition?: 'top' | 'bottom';
-  theme?: 'light' | 'dark' | 'preferred_color_scheme' | 'purple_dark';
+  theme?: 'light' | 'dark' | 'preferred_color_scheme' | 'purple_dark' | 'transparent_dark';
   lang?: string;
   loading?: 'lazy' | 'eager';
 }
