--- a/src/pages/en/blog/index.astro
+++ b/src/pages/en/blog/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../../../layouts/Layout.astro';
 import Navigation from '../../../components/Navigation.astro';
 import type { ContentEntry } from '../../../types/content';
+import Breadcrumb from '../../../components/Breadcrumb.astro';
 
 // 獲取部落格文章
 const posts = Object.values(import.meta.glob('./*.md', { eager: true })) as ContentEntry[];
@@ -9,6 +10,7 @@ const posts = Object.values(import.meta.glob('./*.md', { eager: true })) as Cont
 
 <Layout title="Blog - ccc333bbb" lang="en">
     <Navigation lang="en" currentPath={Astro.url.pathname} />
+    <Breadcrumb lang="en" currentPath={Astro.url.pathname} title="Blog" />
 
     <!-- 主要內容 -->
     <main class="main-content">
